# Agentes-RAG

./: .gitignore  installed_packages.txt
.chainlit/translations/: es-ES.json
GCP/: Vertex_LlamaIndex.py  prueba-1.ipynb
Presentacion/: Ejemplos.ipynb
agentic_rag/: pyproject.toml
agentic_rag/agentic_rag/: FunctionCalling.ipynb  MultiStepReasoning.ipynb  RouterQueryEngine.ipynb
agentic_rag/lib/: OllamaEmbeddings.py  __init__.py  ollama_config.py
agentic_rag/my_lib/: ollama_config.py  openai_config.py
docs/: Que es un RAG.md
src/Ingestion/: main.py  pyproject.toml
src/Ingestion/config/: Config.py  ConfigIngestion.py  __init__.py  logger_config.py
src/Ingestion/lib/Config/: Config.py
src/Ingestion/lib/DirectoryLoader/: BaseDirectoryLoader.py  Unstructured_UF_Loader.py  __init__.py
src/Ingestion/lib/Watcher/: BaseWatcher.py  File2NodesWatcher.py  __init__.py
src/Ingestion/lib/library_custom/langchain/models/: GCP_Model.py  __init__.py
src/Ingestion/lib/library_custom/langchain/prompts/img_to_text/: Image2Text_Model.py
src/Ingestion/lib/library_custom/langchain/prompts/text_block_evaluate/: __TextEvaluation.py  __template.py  create_chain_evaluation.py
src/Ingestion/lib/library_custom/llama_index/: __init__.py
src/Ingestion/lib/library_custom/llama_index/models/: __init__.py
src/Ingestion/lib/library_custom/llama_index/transformations/: DictionaryToMetadata.py  Unstructured_Filter.py  Unstructured_Medatata_PostProcessor.py  Unstructured_SectionTitle_Metadata.py  _LinkedListManager.py  __init__.py
unstructured/: Dockerfile  docker-compose.yml
(+56 files in other folders)
