[tool.poetry]
name = "rag-document-ingestion"
version = "0.1.0"
description = "Este es el proceso de ingesta de los documentos, para leer pdf, procesarlos y convertirlos en nodos que luego pueden ser usados por los modelos o sistemas basados en la libreria Llama-Index."
authors = ["Nicolas Alvarez P"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11, <3.13"
llama-index = "^0.11.7"
llama-index-llms-vertex = "^0.3.3"
unstructured = {extras = ["pdf"], version = "^0.15.9"}
watchdog = "^5.0.2"
langchain = "^0.2.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
